--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Cem Sarıer"
   avatar           : "/images/avatar.jpg"
-  bio              : "Data Science Portfolio"
+  bio              : "Data Scientist. Always Learning."
   location         : "Istanbul, TR"
   email            : "cemsarier@gmail.com"
   links:
